# Reyadeyat-Library

./: .gitignore  CMakeFunctions.txt  CMakeLists.txt  LICENSE  README.md  build-main-validate.sh  build.sh
Reyadeyat-Executable-Core/: CMakeLists.txt  build.sh  main.c
Reyadeyat-Executables/: CMakeFunctions.txt  CMakeLists.LIB.txt  CMakeLists.MODE.txt  CMakeLists.txt
Reyadeyat-Executables/src/: build.sh  main.c
Reyadeyat-Modules/: CMakeFunctions.txt  CMakeLists.LIB.txt  CMakeLists.MODE.txt  CMakeLists.txt
Reyadeyat-Modules/reyadeyat/: core.h
Reyadeyat-Modules/reyadeyat/algorithms/: CMakeLists.txt  build.sh
Reyadeyat-Modules/reyadeyat/algorithms/algorithms.0.0.0/: CMakeLists.txt  algorithms.0.0.0.h
Reyadeyat-Modules/reyadeyat/computer/: CMakeLists.txt
Reyadeyat-Modules/reyadeyat/computer/computer.0.0.0/: CMakeLists.txt  computer.0.0.0.c  computer.0.0.0.h
Reyadeyat-Modules/reyadeyat/data-structures/: CMakeLists.txt  build.sh  data-structures.h
Reyadeyat-Modules/reyadeyat/data-structures/data-structures.0.0.0/: CMakeLists.txt  build.sh
Reyadeyat-Modules/reyadeyat/file/: CMakeLists.txt  build.sh  file-data-structures.h  file.c  file.h
Reyadeyat-Modules/reyadeyat/file/file.0.0.0/: CMakeLists.txt  build.sh  file.0.0.0.c  file.0.0.0.h
Reyadeyat-Modules/reyadeyat/log/: log.c  log.h
Reyadeyat-Modules/reyadeyat/memory/: CMakeLists.txt  build.sh  memory-data-structures.h  memory.c
Reyadeyat-Modules/reyadeyat/memory/memory.0.0.0/: CMakeLists.txt
Reyadeyat-Modules/reyadeyat/utilities/: CMakeLists.txt  build.sh
Reyadeyat-Modules/reyadeyat/utilities/utilities.0.0.0/: CMakeLists.txt  build.sh  utilities.0.0.0.h
Reyadeyat-Modules/src/reyadeyat/: core.h  reyadeyat.h
Reyadeyat-Modules/src/reyadeyat/algorithms/: CMakeLists.txt  algorithms-data-structures.h  algorithms.c  algorithms.h
Reyadeyat-Modules/src/reyadeyat/algorithms/algorithms.0.0.0/: CMakeLists.txt  algorithms.0.0.0.c  build.sh
Reyadeyat-Modules/src/reyadeyat/computer/: CMakeLists.txt  computer-data-structures.h  computer.c  computer.h
Reyadeyat-Modules/src/reyadeyat/computer/computer.0.0.0/: CMakeLists.txt  build.sh
Reyadeyat-Modules/src/reyadeyat/data-structures/: CMakeLists.txt  data-structures-data-structures.h  data-structures.c
Reyadeyat-Modules/src/reyadeyat/data-structures/data-structures.0.0.0/: CMakeLists.txt  data-structures.0.0.0.c  data-structures.0.0.0.h
Reyadeyat-Modules/src/reyadeyat/file/: CMakeLists.txt  build.sh  file-data-structures.h  file.c  file.h
Reyadeyat-Modules/src/reyadeyat/file/file.0.0.0/: CMakeLists.txt  build.sh  external-file.0.0.0.c  external-file.0.0.0.h  internal-file.0.0.0.c  internal-file.0.0.0.h
Reyadeyat-Modules/src/reyadeyat/log/: log.c  log.h
Reyadeyat-Modules/src/reyadeyat/memory/: CMakeLists.txt  build.sh  memory-data-structures.h  memory.c  memory.h
Reyadeyat-Modules/src/reyadeyat/memory/memory.0.0.0/: CMakeLists.txt  build.sh  external-memory-tools.0.0.0.c  external-memory-tools.0.0.0.h  external-memory.0.0.0.c  external-memory.0.0.0.h  internal-memory-tools.0.0.0.c  internal-memory-tools.0.0.0.h  internal-memory.0.0.0.c  internal-memory.0.0.0.h  memory.0.0.0.c  memory.0.0.0.h
Reyadeyat-Modules/src/reyadeyat/utilities/: CMakeLists.txt  build.sh  utilities-data-structures.h  utilities.c  utilities.h
Reyadeyat-Modules/src/reyadeyat/utilities/utilities.0.0.0/: CMakeLists.txt  build.sh  external-utilities.0.0.0.c  external-utilities.0.0.0.h  internal-utilities.0.0.0.c  internal-utilities.0.0.0.h  reyadeyat_assembly_allaho_akbar.s  utilities.0.0.0.c
