cmake_minimum_required(VERSION 3.26)
include(./CMakeFunctions.txt)
project(reyadeyat-c C ASM)
#set(PREFIX "")
#set(CMAKE_STATIC_LIBRARY_PREFIX "")
set(CMAKE_SHARED_LIBRARY_PREFIX "")
#set(CMAKE_SHARED_MODULE_PREFIX "")
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_C_STANDARD 23)

message("Parameters MODE = ${MODE} - BUILD = ${BUILD} - PROJECT_PATH = ${PROJECT_PATH}")
if ("${BUILD}" STREQUAL "DEBUG")
    message("Compiling DEBUG mode")
    set(CMAKE_BUILD_TYPE Debug)
elseif ("${BUILD}" STREQUAL "RELEASE")
    message("Compiling RELESE mode")
    set(CMAKE_BUILD_TYPE Release)
endif()
message("CMAKE_C_COMPILER ${CMAKE_C_COMPILER}")
message("CMAKE_C_FLAGS ${CMAKE_C_FLAGS}")
message("CMAKE_C_FLAGS_DEBUG ${CMAKE_C_FLAGS_DEBUG}")
message("CMAKE_C_FLAGS_MINSIZEREL ${CMAKE_C_FLAGS_MINSIZEREL}")
message("CMAKE_C_FLAGS_RELEASE ${CMAKE_C_FLAGS_RELEASE}")
message("CMAKE_C_FLAGS_RELWITHDEBINFO ${CMAKE_C_FLAGS_RELWITHDEBINFO}")

message("Defined User MODE is ${MODE}")
if (NOT DEFINED MODE)
    message("NO MODE defined, defaulting MODE to mode INCLUDE")
    #SET(MODE "LIBRARY")
    SET(MODE "INCLUDE")
endif()
if ("${MODE}" STREQUAL "LIBRARY")
    message("MODE is: LIBRARY")
    add_compile_definitions(MODE=1)
    #Copy Include Directory Header Files from Reyadeyat-Modules WITHOUT version headers
    set(LIB_SOURCE_DIRECTORY "../Reyadeyat-Modules/src")
    set(INCLUDE_DIRECTORY "./include")
    INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORY})
    COPY_FILE_LIST_FROM_TO("/reyadeyat/*.h" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} false)
    COPY_FILE_LIST_FROM_TO("/reyadeyat/log/*" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} true)
    COPY_FILE_LIST_FROM_TO("/reyadeyat/utilities/*.h" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} false)
    COPY_FILE_LIST_FROM_TO("/reyadeyat/algorithms/*" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} true)
    COPY_FILE_LIST_FROM_TO("/reyadeyat/data-structures/*" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} true)
    COPY_FILE_LIST_FROM_TO("/reyadeyat/file/*.h" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} false)
    COPY_FILE_LIST_FROM_TO("/reyadeyat/memory/*.h" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} false)
    LINK_DIRECTORIES("./lib")
    set(SOURCE_DIRECTORY_MAIN "./src")
    file(GLOB_RECURSE SOURCE_FILE_LIST "${SOURCE_DIRECTORY_MAIN}/*.c" "${INCLUDE_DIRECTORY}/*.c")
    ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILE_LIST} ${SOURCE_DIRECTORY})

    #file(MAKE_DIRECTORY "./lib")
    #set(SOURCE_DIRECTORY "./src")
    #file(GLOB_RECURSE SOURCE_FILE_LIST "${SOURCE_DIRECTORY}/*.c" "${INCLUDE_DIRECTORY}/*.c")
    #message("source files in dir: ${SOURCE_DIRECTORY}")
    #foreach(SOURCE_FILE IN LISTS SOURCE_FILE_LIST)
    #    message("source file: ${SOURCE_FILE}")
    #endforeach()
    COPY_FILE_LIST_FROM_TO("*.so" "../Reyadeyat-Modules/lib" "../lib" false)
elseif("${MODE}" STREQUAL "INCLUDE")
    message("MODE is: INCLUDE")
    add_compile_definitions(MODE=2)
    #Copy Include Directory Header Files from Reyadeyat-Modules WITH version headers
    #set(LIB_SOURCE_DIRECTORY "../Reyadeyat-Modules/src")
    #set(INCLUDE_DIRECTORY "./include")
    #COPY_FILE_LIST_FROM_TO("/reyadeyat/*.c" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} true)
    #COPY_FILE_LIST_FROM_TO("/reyadeyat/*.h" ${LIB_SOURCE_DIRECTORY} ${INCLUDE_DIRECTORY} true)
    set(SOURCE_DIRECTORY "./src")
    set(INCLUDE_DIRECTORY "../Reyadeyat-Modules/src")
    file(GLOB_RECURSE SOURCE_FILE_LIST "${SOURCE_DIRECTORY}/*" "${INCLUDE_DIRECTORY}/*")
    INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORY})
    ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILE_LIST} ${INCLUDE_FILE_LIST})
endif()

set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin COMPONENT Binaries)

