cmake_minimum_required(VERSION 3.26)
include(./CMakeFunctions.txt)
project(reyadeyat-memory-lib C)
#set(PREFIX "")
#set(CMAKE_STATIC_LIBRARY_PREFIX "")
set(CMAKE_SHARED_LIBRARY_PREFIX "")
#set(CMAKE_SHARED_MODULE_PREFIX "")
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_C_STANDARD 23)
if (NOT DEFINED BUILD)
    message("NO BUILD defined, defaulting BUILD to mode DEBUG")
    SET(BUILD "DEBUG")
endif()
if ("${BUILD}" STREQUAL "DEBUG")
    set(CMAKE_BUILD_TYPE Debug)
    set(CMAKE_C_FLAGS "${CFLAGS} -g -Wall -Werror -fPIC -fstack-protector --save-temps")
elseif ("${BUILD}" STREQUAL "RELEASE")
    set(CMAKE_BUILD_TYPE Release)
    set(CMAKE_C_FLAGS "${CFLAGS} -Wall -Werror -fPIC -O2 -fstack-protector --save-temps")
endif()
message("CFLAGS ${CMAKE_C_FLAGS}")

set(INCLUDE_DIRECTORY "./src")
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORY})

message("Defined User MODE is ${MODE}")
if (NOT DEFINED MODE)
    message("NO MODE defined, defaulting MODE to mode LIBRARY")
    #SET(MODE "LIBRARY")
    SET(MODE "INCLUDE")
endif()
if ("${MODE}" STREQUAL "LIBRARY")
    message("MODE is: LIBRARY")
    add_compile_definitions(MODE=1)
    set(SOURCE_DIRECTORY "./src/reyadeyat/memory")
    file(GLOB SOURCE_FILE_LIST "${SOURCE_DIRECTORY}/*.c")
elseif ("${MODE}" STREQUAL "INCLUDE")
    message("MODE is: INCLUDE")
    add_compile_definitions(MODE=2)
    set(SOURCE_DIRECTORY "./src")
    file(GLOB_RECURSE SOURCE_FILE_LIST "${SOURCE_DIRECTORY}/*.c")
endif()
message("source files in dir: ${SOURCE_DIRECTORY}")
foreach(SOURCE_FILE IN LISTS SOURCE_FILE_LIST)
    message("source file: ${SOURCE_FILE}")
endforeach()
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILE_LIST} ${SOURCE_DIRECTORY})

set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)
install(TARGETS ${PROJECT_NAME} DESTINATION lib)

