cmake_minimum_required(VERSION 3.24)
project(reyadeyat-file-lib.0.0.0 C)
#set(PREFIX "")
#set(CMAKE_STATIC_LIBRARY_PREFIX "")
set(CMAKE_SHARED_LIBRARY_PREFIX "")
#set(CMAKE_SHARED_MODULE_PREFIX "")
set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_C_STANDARD 23)
message("Parameters MODE = ${MODE} - BUILD = ${BUILD} - PROJECT_PATH = ${PROJECT_PATH}")
if ("${BUILD}" STREQUAL "DEBUG")
    set(CMAKE_BUILD_TYPE Debug)
    set(CMAKE_C_FLAGS "${CFLAGS} -g -Wall -Werror -fPIC -fstack-protector --save-temps")
elseif ("${BUILD}" STREQUAL "RELEASE")
    set(CMAKE_BUILD_TYPE Release)
    set(CMAKE_C_FLAGS "${CFLAGS} -Wall -Werror -fPIC -O2 -fstack-protector --save-temps")
endif()
message("CFLAGS ${CMAKE_C_FLAGS}")

set(SOURCE_DIRECTORY ".")
set(SOURCE_DIRECTORY_LOG "../../log")
file(GLOB_RECURSE SOURCE_FILE_LIST "${SOURCE_DIRECTORY}/*.c" "${SOURCE_DIRECTORY_LOG}/*.c")
message("source files in dir: ${SOURCE_DIRECTORY}")
foreach(SOURCE_FILE IN LISTS SOURCE_FILE_LIST)
    message("source file: ${SOURCE_FILE}")
endforeach()

set(INCLUDE_DIRECTORY "../../../../src")
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORY})

add_library(${PROJECT_NAME} SHARED ${SOURCE_FILE_LIST})

set_target_properties("${PROJECT_NAME}" PROPERTIES LINKER_LANGUAGE C)
install(TARGETS ${PROJECT_NAME} DESTINATION lib)
